@@ -1,13 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.500 2005/11/27 18:50:11 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.501 2005/11/27 19:07:45 codeman Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
   27 Nov 2005; Preston Cody <codeman@gentoo.org>
   gli-dialog won't let you dynamic stage3 without systempkgs.txt.
   initial gli-dialog support for recommended partitioning layout and clear.
+  failure cleanup now an option for gli-dialog.
 
   26 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIArchitectureTemplate.py:
